ADD Test line travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ before_install:
 
 script:
   - docker run --name protaascan -d -p 8787:8787 -e USER='rstudio' -e PASSWORD='rstudio' najlabioinfo/shinydocker:latest
-  -  docker exec -it protaascan R -e "shiny::runApp('/home/rstudio/Nov17/ProtAAScann')"
+  - docker exec -it protaascan R -e "shiny::runApp('/home/rstudio/Nov17/ProtAAScann')"
+  - bundle exec rake test
