--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - docker
 
 before_install:
-  - docker docker pull najlabioinfo/shinydocker
+  - docker pull najlabioinfo/shinydocker
 
 script:
   - docker run --name protaascan -d -p 8787:8787 -e USER='rstudio' -e PASSWORD='rstudio' najlabioinfo/shinydocker:latest
